syntax = "proto3";

package livestack;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto"; 
import "google/protobuf/any.proto";
import "jobs.proto";

service zzcloudService {
  rpc GetJobRec(GetJobRecRequest) returns (GetJobRecResponse);
  rpc EnsureStreamRec(EnsureStreamRecRequest) returns (google.protobuf.Empty);
  rpc EnsureJobStreamConnectorRec(EnsureJobStreamConnectorRecRequest) returns (google.protobuf.Empty);
  rpc GetJobStreamConnectorRecs(GetJobStreamConnectorRecsRequest) returns (stream JobStreamConnectorRecord);
  rpc GetJobDatapoints(GetJobDatapointsRequest) returns (DatapointRecord);
  rpc AddDatapoint(AddDatapointRequest) returns (AddDatapointResponse);
}

message GetZZJobTestRequest {
  string id = 1;
}

message GetZZJobTestResponse {
  string projectId = 1;
  string pipeName = 2;
  string jobId = 3;
}



message EnsureStreamRecRequest {
  string project_id = 1;
  string stream_id = 2;
}

message EnsureJobStreamConnectorRecRequest {
  string project_id = 1;
  string stream_id = 2;
  string job_id = 3;
  string key = 4;
  string connector_type = 5;
}

message GetJobStreamConnectorRecsRequest {
  string project_id = 1;
  string job_id = 2;
  string key = 3;
  string connector_type = 4;
}

message JobStreamConnectorRecord {
  string project_id = 1;
  string job_id = 2;
  google.protobuf.Timestamp time_created = 3;
  string stream_id = 4;
  string key = 5;
  string connector_type = 6;
}

message GetJobDatapointsRequest {
  string project_id = 1;
  string pipe_name = 2;
  string job_id = 3;
  string io_type = 4;
  string order = 5;
  int32 limit = 6;
  string key = 7;
}

message DatapointRecord {
  string datapoint_id = 1;
  google.protobuf.Struct data = 2;
}

message JobInfo {
  string job_id = 1;
  string job_output_key = 2;
}

message AddDatapointRequest {
  string project_id = 1;
  string stream_id = 2;
  string datapoint_id = 3;
  JobInfo job_info = 4;
  google.protobuf.Any data = 5;
}

message AddDatapointResponse {
  string datapoint_id = 1;
}