syntax = "proto3";

package livestack;

import  "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto"; 
// import "google/protobuf/any.proto";

service DBService {
  rpc GetJobRec(GetJobRecRequest) returns (GetJobRecResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };
  rpc EnsureJobAndStatusAndConnectorRecs(EnsureJobAndStatusAndConnectorRecsRequest) returns (google.protobuf.Empty);
  rpc UpdateJobInstantiatedGraph(UpdateJobInstantiatedGraphRequest) returns (google.protobuf.Empty);
  rpc GetJobDatapoints(GetJobDatapointsRequest) returns (GetJobDatapointsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };

  rpc GetJobStreamConnectorRecs(GetJobStreamConnectorRecsRequest) returns (GetJobStreamConnectorRecsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };
  rpc AppendJobStatusRec(AppendJobStatusRecRequest) returns (google.protobuf.Empty);
  rpc GetParentJobRec(GetParentJobRecRequest) returns (GetParentJobRecResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  };
}


message JobRec {
  string project_uuid = 1;
  string spec_name = 2; // Align with jobs.ts
  string job_id = 3;
  google.protobuf.Timestamp time_created = 4;
  google.protobuf.Struct job_params = 5;
}

message GetJobRecRequest {
  string projectUuid = 1;
  string specName = 2;
  string jobId = 3;
}

message JobRecAndStatus {
  JobRec rec = 1;
  string status = 2;
}

message GetJobRecResponse {
  oneof value {
    JobRecAndStatus rec = 1; // The actual response data
    google.protobuf.Empty null_response = 2; // Signal that the response is null
  }
}

message GetZZJobTestRequest {
  string id = 1;
}

message GetZZJobTestResponse {
  string projectUuid = 1;
  string pipeName = 2;
  string jobId = 3;
}


enum ConnectorType {
  IN = 0;
  OUT = 1;
}

message EnsureJobAndStatusAndConnectorRecsRequest {
  string projectUuid = 1;
  string specName = 2;
  string jobId = 3;
  string jobOptionsStr = 4;
  optional string parentJobId = 5;
  optional string uniqueSpecLabel = 6;
  map<string, string> inputStreamIdOverridesByTag = 7;
  map<string, string> outputStreamIdOverridesByTag = 8;
}


message UpdateJobInstantiatedGraphRequest {
  string projectUuid = 1;
  string specName = 2;
  string jobId = 3;
  string instantiatedGraphStr = 4;
}

enum Order {
  ASC = 0;
  DESC = 1;
}

message GetJobDatapointsRequest {
  string projectUuid = 1;
  string specName = 2;
  string jobId = 3;
  string key = 4;
  ConnectorType ioType = 5;
  optional Order order = 7;
  optional int32 limit = 8;
}

message DatapointRecord {
  string datapointId = 1;
  string dataStr = 2;
}

message GetJobDatapointsResponse {
  repeated DatapointRecord points = 1;
}

message GetJobStreamConnectorRecsRequest {
  string projectUuid = 1;
  string jobId = 2;
  optional string key = 3;
  optional ConnectorType connectorType = 4;
}

message JobStreamConnectorRecord {
  string project_uuid = 1;
  string job_id = 2;
  google.protobuf.Timestamp time_created = 3;
  string stream_id = 4;
  string key = 5;
  ConnectorType connector_type = 6;
}

message GetJobStreamConnectorRecsResponse {
  repeated JobStreamConnectorRecord records = 1;
}


message AppendJobStatusRecRequest {
  string projectUuid = 1;
  string specName = 2;
  string jobId = 3;
  string jobStatus = 4;
}

message GetParentJobRecRequest {
  string projectUuid = 1;
  string childJobId = 2;
}

message ParentJobRec {
  string project_uuid = 1;
  string parent_job_id = 2;
  string spec_name = 3;
  optional string unique_spec_label = 4;
  google.protobuf.Timestamp time_created = 5;
  optional string job_params_str = 6;
}

message GetParentJobRecResponse {
  oneof value {
    ParentJobRec rec = 1; // The actual response data
    google.protobuf.Empty null_response = 2; // Signal that the response is null
  }
}
